# QXI

./: .gitignore  .gitigore  README.md  makefile  test.py  xvhdl.pb
Pico/: CMakeLists.txt  data_set.c  data_set.h  stub_skeleton.c  stub_skeleton.h  test_middleware.c  test_qxi.c  test_spi.c
Pico/board/: CMakeLists.txt  board.c  board.h
Pico/middleware/: CMakeLists.txt  middleware.c  middleware.h  qxi.c  qxi.h
Pico/pac193x/: Pac193x.c
QXI_proj/: QXI_proj.xpr
QXI_proj/QXI_proj.cache/sim/: ssm.db
QXI_proj/QXI_proj.cache/wt/: synthesis.wdf
QXI_proj/QXI_proj.runs/.jobs/: vrs_config_1.xml
QXI_proj/QXI_proj.sim/sim_1/behav/xsim/: compile.sh  elaborate.sh  simulate.sh  spi_slave_tb_behav.wdb  spi_slave_tb_vhdl.prj  xelab.pb  xvhdl.pb
QXI_proj/QXI_proj.sim/sim_1/behav/xsim/xsim.dir/spi_slave_tb_behav/: Compile_Options.txt  TempBreakPointFile.txt  xsim.dbg  xsimk  (+7 more)
QXI_proj/project_2/: project_2.xpr
QXI_proj/project_2/project_2.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  synthesis.wdf  webtalk_pa.xml
QXI_proj/project_2/project_2.hw/hw_1/: hw.xml
QXI_proj/project_2/project_2.hw/webtalk/: .xsim_webtallk.info
QXI_proj/project_2/project_2.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_4.xml  vrs_config_5.xml
QXI_proj/project_2/project_2.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  env5_top_reconfig.tcl  env5_top_reconfig.vdi  env5_top_reconfig_bus_skew_routed.rpt  env5_top_reconfig_bus_skew_routed.rpx  env5_top_reconfig_clock_utilization_routed.rpt  env5_top_reconfig_control_sets_placed.rpt  env5_top_reconfig_drc_opted.rpt  env5_top_reconfig_drc_opted.rpx  env5_top_reconfig_drc_routed.rpt  env5_top_reconfig_drc_routed.rpx  env5_top_reconfig_io_placed.rpt  env5_top_reconfig_methodology_drc_routed.pb  env5_top_reconfig_methodology_drc_routed.rpt  env5_top_reconfig_methodology_drc_routed.rpx  env5_top_reconfig_opt.dcp  env5_top_reconfig_physopt.dcp  env5_top_reconfig_placed.dcp  env5_top_reconfig_power_routed.rpt  env5_top_reconfig_power_routed.rpx  env5_top_reconfig_power_summary_routed.pb  env5_top_reconfig_route_status.rpt  env5_top_reconfig_routed.dcp  env5_top_reconfig_timing_summary_routed.pb  env5_top_reconfig_timing_summary_routed.rpt  env5_top_reconfig_timing_summary_routed.rpx  env5_top_reconfig_utilization_placed.pb  env5_top_reconfig_utilization_placed.rpt  gen_run.xml  htr.txt  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  usage_statistics_webtalk.html  (+4 more)
QXI_proj/project_2/project_2.runs/synth_1/: .vivado.begin.rst  env5_top_reconfig.dcp  env5_top_reconfig.tcl  env5_top_reconfig.vds  env5_top_reconfig_utilization_synth.pb  env5_top_reconfig_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
QXI_proj/project_2/project_2.runs/synth_1/.Xil/: env5_top_reconfig_propImpl.xdc
constraints/: env5.xdc  sea_board.xdc  xx.xdc
source/: InterfaceStateMachine.vhd  env5_reconfig_top.vhd  env5_top.vhd  hello.vhd  middleware.vhd  spi_slave.vhd
test/: env5_top_reconfig_tb.vhd  env5_top_tb.vhd  hello_tb.vhd  spi_slave_tb.vhd
xsim.dir/work/: hello_and_gate.vdb  hello_tb.vdb  spi_slave.vdb  spi_slave_tb.vdb  work.rlx
(+5 files in other folders)
